--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AR GPS OSM</title>
-<link rel="stylesheet" href="style.css">
+<title>AR GPS OSM Demo</title>
+<style>
+  body, html { margin: 0; padding: 0; overflow: hidden; background: black; }
+  #camera { position: fixed; top:0; left:0; width:100%; height:100%; object-fit: cover; }
+  #mapCanvas { position: fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; }
+  #enableOrientation { position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);z-index:10;padding:10px 20px;font-size:16px; }
+</style>
 </head>
 <body>
-<video id="camera" autoplay playsinline style="position: fixed; top:0; left:0; width:100%; height:100%; object-fit: cover;"></video>
-<canvas id="mapCanvas" style="position: fixed; top:0; left:0; width:100%; height:100%; pointer-events:none;"></canvas>
+
+<video id="camera" autoplay playsinline></video>
+<canvas id="mapCanvas"></canvas>
+<button id="enableOrientation">Enable Orientation</button>
+
 <script src="main.js"></script>
 </body>
 </html>
+
