--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AR GPS OSM Demo</title>
+<title>GPS + Giroszkóp Demo</title>
 <style>
-  body, html { margin: 0; padding: 0; overflow: hidden; background: black; }
-  #camera { position: fixed; top:0; left:0; width:100%; height:100%; object-fit: cover; }
-  #mapCanvas { position: fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; }
-  #enableOrientation { position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);z-index:10;padding:10px 20px;font-size:16px; }
+  body { margin:0; padding:0; background:black; color: yellow; font-family: monospace; }
+  #info { position: absolute; top: 20px; left: 20px; font-size: 18px; }
+  #enableOrientation { position: absolute; top:50%; left:50%; transform: translate(-50%, -50%); padding:10px 20px; font-size:16px; }
 </style>
 </head>
 <body>
 
-<video id="camera" autoplay playsinline></video>
-<canvas id="mapCanvas"></canvas>
+<div id="info">
+  Lat: ... <br>
+  Lng: ... <br>
+  Alpha: ... <br>
+  Beta: ... <br>
+  Gamma: ...
+</div>
+
 <button id="enableOrientation">Enable Orientation</button>
 
 <script src="main.js"></script>
 </body>
 </html>
-
