--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GPS + Giroszkóp Demo</title>
+<title>AR GPS + Orientation Demo</title>
 <style>
-  body { margin:0; padding:0; background:black; color: yellow; font-family: monospace; }
-  #info { position: absolute; top: 20px; left: 20px; font-size: 18px; }
-  #startBtn { position: absolute; top:50%; left:50%; transform: translate(-50%, -50%); padding:10px 20px; font-size:16px; }
+  body, html { margin:0; padding:0; overflow:hidden; background:black; }
+  #camera { position: fixed; top:0; left:0; width:100%; height:100%; object-fit: cover; z-index:0; }
+  #info { position: absolute; top: 20px; left: 20px; font-family: monospace; color: yellow; font-size: 18px; z-index: 1; pointer-events:none; }
+  #startBtn { position: absolute; top:50%; left:50%; transform: translate(-50%, -50%); padding:10px 20px; font-size:16px; z-index:2; }
 </style>
 </head>
 <body>
 
+<video id="camera" autoplay playsinline></video>
 <div id="info">
   Lat: ... <br>
   Lng: ... <br>
