--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AR GPS + Orientation Demo</title>
+<title>AR OSM Demo</title>
 <style>
   body, html { margin:0; padding:0; overflow:hidden; background:black; }
   #camera { position: fixed; top:0; left:0; width:100%; height:100%; object-fit: cover; z-index:0; }
-  #info { position: absolute; top: 20px; left: 20px; font-family: monospace; color: yellow; font-size: 18px; z-index: 1; pointer-events:none; }
-  #startBtn { position: absolute; top:50%; left:50%; transform: translate(-50%, -50%); padding:10px 20px; font-size:16px; z-index:2; }
+  #overlay { position: fixed; top:0; left:0; width:100%; height:100%; z-index:1; pointer-events:none; }
+  #info { position: absolute; top: 20px; left: 20px; font-family: monospace; color: yellow; font-size: 16px; z-index:2; pointer-events:none; }
+  #startBtn { position: absolute; top:50%; left:50%; transform: translate(-50%, -50%); padding:10px 20px; font-size:16px; z-index:3; }
 </style>
 </head>
 <body>
 
 <video id="camera" autoplay playsinline></video>
+<canvas id="overlay"></canvas>
 
 <div id="info">
   Lat: ... <br>
@@ -21,10 +23,10 @@
   Alpha: ... <br>
   Beta: ... <br>
   Gamma: ... <br>
-  Version: v1.0.2
+  Version: v1.0.3
 </div>
 
-<button id="startBtn">Start GPS + Orientation</button>
+<button id="startBtn">Start AR Map</button>
 
 <script src="main.js"></script>
 </body>
